--- a/FrontMarcheEtDevenir/src/app/header/header.component.html
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.html
@@ -1,8 +1,21 @@
 <nav class="header-container">
-    <img class="logo" src="/docs/maquette/MARCHEDEVIENS_BLANC.png" alt="Logo">
-    <div class="btn-container">
-        <button class="devis">Devis sur mesure</button>
-        <button class="login">Login</button>
-        <button class="burger-menu">Menu</button>
+  <div class="btn-container">
+    <img class="logo" src="https://marchedeviens.com/wp-content/uploads/2023/04/MARCHEDEVIENS_BLANC.png" alt="Logo">
+    <div>
+      <button class="devis"><a href="/contact">Devis sur mesure</a></button>
+      <button class="login"><a href="/login">Login</a></button>
     </div>
+    <div class="menu-unfold">
+      <input class="burger-check" id="burger-check" type="checkbox"><label for="burger-check" class="burger"></label>
+      <nav id="navigation1" class="navigation">
+        <ul>
+          <li><a href="/">Accueil</a></li>
+          <li><a href="/offreRandonnees">Les offres</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/login">Connection</a></li>
+          <li>Plus a venir...</li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </nav>
