--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -1,92 +1,97 @@
-<section>
-  <p>Fédérer vos équipes avec Marche&Deviens pour créer une synergie gagnante!</p>
-  <div class="img_sejourGroupe">
-    <button id="click">click</button>
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-    <button id="click">click</button>
-  </div>
-  <button id="devis">Demander votre devis</button>
-</section>
+<website-header></website-header>
+<main>
+  <h3>Nos offres</h3>
+  <section>
+    <p>Fédérer vos équipes avec Marche&Deviens pour créer une synergie gagnante!</p>
+    <div class="img_sejourGroupe">
+      <button id="click">click</button>
+      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+      <button id="click">click</button>
+    </div>
+    <button id="devis">Demander votre devis</button>
+  </section>
 
-<section class="sejours_courts">
-  <h1 >Séjours courts</h1>
-  <div class="cardSejourCourt">
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour sur la jolie montagne bleue
-      </p>
-      <h4>Date: 14/09</h4>
-      <h4>Tarif: 185euros</h4>
-      <button>Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour sur la jolie montagne rouge.
-      </p>
-      <h4>&é/12</h4>
-      <h4>123euros</h4>
-      <button>Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour sur la jolie montagne jaune.
-      </p>
-      <h4>26/10</h4>
-      <h4>189euros</h4>
-      <button>Réservation</button>
-    </div>
-    
-  </div>
-</section>
+  <section class="sejours_courts">
+    <h1>Séjours courts</h1>
+    <div class="cardSejourCourt">
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour sur la jolie montagne bleue
+        </p>
+        <h4>Date: 14/09</h4>
+        <h4>Tarif: 185euros</h4>
+        <button>Réservation</button>
+      </div>
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour sur la jolie montagne rouge.
+        </p>
+        <h4>&é/12</h4>
+        <h4>123euros</h4>
+        <button>Réservation</button>
+      </div>
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour sur la jolie montagne jaune.
+        </p>
+        <h4>26/10</h4>
+        <h4>189euros</h4>
+        <button>Réservation</button>
+      </div>
 
-<section class="sejours_longs">
-  <h1>Séjours longs</h1>
-  <div class="cardSejourLong">
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour dans les Ardennes.
-      </p>
-      <h4>Date: 14/09</h4>
-      <h4>Tarif: 678euros</h4>
-      <button>Réservation</button>
     </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour en Laponie.
-      </p>
-      <h4>&é/12</h4>
-      <h4>567euros</h4>
-      <button>Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Sejour en Bolivie.
-      </p>
-      <h4>26/10</h4>
-      <h4>1290euros</h4>
-      <button>Réservation</button>
-    </div>
+  </section>
 
-  </div>
-</section>
+  <section class="sejours_longs">
+    <h1>Séjours longs</h1>
+    <div class="cardSejourLong">
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour dans les Ardennes.
+        </p>
+        <h4>Date: 14/09</h4>
+        <h4>Tarif: 678euros</h4>
+        <button>Réservation</button>
+      </div>
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour en Laponie.
+        </p>
+        <h4>&é/12</h4>
+        <h4>567euros</h4>
+        <button>Réservation</button>
+      </div>
+      <div class="card">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
+        <h3 id="titreCard">Titre</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          Sejour en Bolivie.
+        </p>
+        <h4>26/10</h4>
+        <h4>1290euros</h4>
+        <button>Réservation</button>
+      </div>
+
+    </div>
+  </section>
+</main>
+<website-footer></website-footer>
