--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/page-inscription-connection.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/page-inscription-connection.component.html
@@ -2,3 +2,4 @@
   <app-formulaire-inscription></app-formulaire-inscription>
   <app-formulaire-connexion></app-formulaire-connexion>
 </section>
+<website-footer></website-footer>
