--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.css
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.css
@@ -1,12 +1,10 @@
 .container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  width: 70vw;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
 
-form {
-    grid-column: 1 / 5;
-}
 
 form div {
     display: flex;
@@ -16,22 +14,33 @@ form div {
     justify-content: center;
 }
 
-input {
-    height: 30px;
-    font-size: 1.2rem;
-}
-
-.submit {
-  grid-column : 4;
-  margin-top: 1vh;
+input,
+textarea {
+  height: 30px;
+  font-size: 1.2rem;
+  background-color: #154734;
+  color: white;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 textarea {
   height: 140px;
-  font-size: 1.2rem;
 }
 
 label {
     font-size: 1.5em;
     margin-bottom: 0.8vh;
 }
+
+input[type=submit] {
+    height: 50px;
+    margin-top: 1vh;
+    background-color:black;
+    color: white;
+    border-radius: 5px;
+    transition: 100ms ease-in-out;
+}
+  input[type=submit]:hover {
+    background-color: #154734;
+  }
