--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.css
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.css
@@ -1,13 +1,27 @@
 main {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    padding: 2vw;
+  padding: 2vw;
 }
 
 h1 {
   font-size: 2.5rem;
   font-weight: bolder;
-  align-self: center;
+  text-align: center;
+  margin-bottom: 3vh;
+  margin-top: 10vh
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+    margin-bottom: 5vh
+}
+
+section figure {
+  width: 50%
+}
+
+app-contact-form {
+    width: 40%
 }
 
