--- a/FrontMarcheEtDevenir/src/app/footer/footer.component.html
+++ b/FrontMarcheEtDevenir/src/app/footer/footer.component.html
@@ -1,28 +1,29 @@
 <hr>
 
 <nav class="footer-container">
-    <img class="logo" src="/docs/maquette/MARCHEDEVIENS_BLANC.png" alt="Logo">
-    <div class="btn-footer-container">
-        <div class="footer-column">
-            <p class="footer-email">Email</p>
-            <p class="footer-adresse">Adresse</p>
-            <p class="footer-coordonnees">Coordonnées</p>
-            <p class="footer-contact">Contact</p>
-        </div>
-        <div class="footer-column">
-            <p class="footer-cgv">CGV</p>
-            <p class="footer-infos-chiens">Malamute</p>
-            <img class="footer-linkedin-logo"
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" />
-        </div>
+  <a href="/">
+    <img class="logo" src="https://marchedeviens.com/wp-content/uploads/2023/04/MARCHEDEVIENS_BLANC.png" alt="Logo">
+  </a>
+    <div class="footer-column">
+      <p class="footer-email">Rue de Lannois 4</p>
+      <p class="footer-adresse">7760 Celles</p>
+      <p class="footer-coordonnees">Belgique</p>
+      <a href="/contact"><p class="footer-contact">Contact</p></a>
     </div>
-    <!-- Bouton de 'Uiverse.io' -->
-    <button class="button">
-        <svg class="svgIcon" viewBox="0 0 384 512">
-            <path
-                d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z">
-            </path>
-        </svg>
-    </button>
+
+    <img class="footer-linkedin-logo"
+         src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/LinkedIN_white.png" />
+  
+  <div class="footer-column">
+    <p class="footer-cgv">CGV</p>
+    <p class="footer-infos-chiens">Malamute</p>
+  </div>
+  <!-- Bouton de 'Uiverse.io' -->
+  <button class="button">
+    <svg class="svgIcon" viewBox="0 0 384 512">
+      <path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z">
+      </path>
+    </svg>
+  </button>
 
 </nav>
