--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.css
@@ -1,13 +1,23 @@
 /* centrer le contenue de la page*/
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
+    padding-top: 5vh;
+}
+
 h3 {
-  display: flex;
-  justify-content: center;
+    text-align:center;
 }
 
 form {
-  display: grid;
-  border-right: solid 3px black;
-  justify-content: center
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 15vh;
+  padding-right: 15vh;
+  margin-top: 5vh;
 }
 
 /* affiche un message d'erreur si erreur dans le mail ou le mot de passe*/
@@ -32,8 +42,14 @@ input {
   margin-bottom: 16px;
 }
 
+input[type=submit]:hover {
+    background-color: black;
+}
+
 /*application de style sur le "input" de type "submit"*/
   input[type=submit] {
     background-color: rgb(88, 129, 87);
     color: white;
+    border: 0;
+    transition: 100ms ease-in-out;
   }
