--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
@@ -1,12 +1,34 @@
-/* alignement du formulaire au centre*/
-h3{
-    display:flex;
-    justify-content:center;
+/* centrer le contenue de la page*/
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  padding-top: 5vh;
 }
+
+h3 {
+  text-align: center;
+}
+
 form {
-  display: grid;
-  border-right: solid 3px black;
-  justify-content:center
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 15vh;
+  padding-right: 15vh;
+  margin-top: 5vh;
+}
+
+/* affiche un message d'erreur si erreur dans le mail ou le mot de passe*/
+.Inactif {
+  display: none
+}
+
+.Actif {
+  display: flex;
+  justify-content: center;
+  color: red;
 }
 
 /* stylisation des "input" */
@@ -20,49 +42,13 @@ input {
   margin-bottom: 16px;
 }
 
+  input[type=submit]:hover {
+    background-color: black;
+  }
   /*application de style sur le "input" de type "submit"*/
   input[type=submit] {
     background-color: rgb(88, 129, 87);
     color: white;
-  }
-
- /* affiche un message pour les requis du mot de passe*/
-.messageCache {
-  display: none;
-  background: #f1f1f1;
-  color: #000;
-  position: relative;
-  padding: 20px;
-  margin-top: 10px;
-}
-
-.messageAfficher {
-  display: block;
-  background: #f1f1f1;
-  color: #000;
-  position: relative;
-  padding: 20px;
-  margin-top: 10px;
-}
-
-.message p {
-    padding: 10px 35px;
-    font-size: 18px;
-}
-
-
-/*change le style du message du mot de passe*/
-.invalid {
-  color: red;
-}
-  .invalid:before {
-  content: "&#10006;";
-}
-
-.valid {
-  color: green;
-}
-
-  .valid:before {
-    content: "&#10004;";
+    border: 0;
+    transition: 100ms ease-in-out;
   }
