--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -1,18 +1,19 @@
 <website-header></website-header>
+
 <main>
   <h3>Nos offres</h3>
-  <section>
-    <p>Fédérer vos équipes avec Marche&Deviens pour créer une synergie gagnante!</p>
-    <div class="img_sejourGroupe">
-      <button id="click">click</button>
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" />
-      <button id="click">click</button>
-    </div>
-    <button id="devis">Demander votre devis</button>
-  </section>
+
+<section class="offre-randonnees">
+  <p>Fédérer vos équipes avec Marche & Deviens pour créer une synergie gagnante!</p>
+  <div class="img_sejourGroupe">
+    <button id="click"><h1>↵</h1></button>
+    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
+    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 2" />
+    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 3" />
+    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 4" />
+    <button id="click"><h1>↳</h1></button>
+  </div>
+</section>
 
 <section class="sejours_courts">
   <h1>Séjours courts</h1>
@@ -99,5 +100,5 @@
   </div>
   <button id="devis">Demander votre devis</button>
 </section>
-    </main>
+</main>
 <website-footer></website-footer>
