feat: ajout partiel du controle de saisie

--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -31,14 +31,14 @@
     [(ngModel)]="service.FormData.MotDePasse"
     minlength="8"  required />
 
-    <!--<section class="messageCache">
+    <section class="messageCache">
       <h4>le mot de passe doit contenir : </h4>
-      <p class="invalid"> au moins une <b>minuscule</b> </p>
-      <p class="invalid"> au moins une <b>majuscule</b> </p>
-      <p class="invalid"> au moins un <b>chiffre</b> </p>
-      <p class="invalid"> au moins un <b>caractère spécial</b> </p>
-      <p class="invalid"> au moins  <b>8 charactères</b> </p>
-    </section>-->
+      <p class="messageCache"> au moins une <b>minuscule</b> </p>
+      <p class="messageCache"> au moins une <b>majuscule</b> </p>
+      <p class="messageCache"> au moins un <b>chiffre</b> </p>
+      <p class="messageCache"> au moins un <b>caractère spécial</b> </p>
+      <p class="messageCache"> au moins  <b>8 charactères</b> </p>
+    </section>
 
 
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
