style: avec le reset c'est mieux

--- a/FrontMarcheEtDevenir/src/styles.css
+++ b/FrontMarcheEtDevenir/src/styles.css
@@ -1,2 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'open sans', sans-serif;
+}
+
+a {
+    color: inherit;
+}
 
 
