style: overhaul du front pt.2

--- a/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre.component.css
+++ b/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre.component.css
@@ -10,3 +10,8 @@ h1 {
   font-weight: bolder;
   align-self: center;
 }
+
+app-creation-offre-form {
+    padding-left: 15vw;
+    padding-right: 15vw;
+}
