--- a/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre.component.html
+++ b/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre.component.html
@@ -1,4 +1,6 @@
 <main>
+  <a href="/"><p> <b><</b> Page d'accueil</p></a>
+
   <h1>Ajout d'une offre</h1>
   <app-creation-offre-form class="crea"></app-creation-offre-form>
 </main>
