--- a/FrontMarcheEtDevenir/src/app/header/header.component.html
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="header-container">
   <div class="btn-container">
-    <img class="logo" src="https://marchedeviens.com/wp-content/uploads/2023/04/MARCHEDEVIENS_BLANC.png" alt="Logo">
+    <a href="/"><img class="logo" src="https://marchedeviens.com/wp-content/uploads/2023/04/MARCHEDEVIENS_BLANC.png" alt="Logo"></a>
     <div>
       <button class="devis"><a href="/contact">Devis sur mesure</a></button>
       <button class="login"><a href="/login">Login</a></button>
