--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
@@ -27,8 +27,9 @@
 
 <section class="evenements">
   <h3 class="evenements-title"><strong>Nos événements</strong></h3>
+  <a href="/offreRandonnees">
+    <div class="evenements-wrapper">
 
-  <div class="evenements-wrapper">
       <img class="image-evenement" src="https://th.bing.com/th/id/OIP.77iWTkARr3usKEGZDcomsgHaE6?rs=1&pid=ImgDetMain" alt="(insérer image du lieu)">
       <h5>Titre</h5>
       <div class="details-evenement">
@@ -37,8 +38,8 @@
         <p>Tarif</p>
       </div>
     </div>
-
-    <button class="btnDevis"><a href="/contact">Demandez votre devis</a></button>
+  </a>
+  <button class="btnDevis"><a href="/contact">Demandez votre devis</a></button>
 </section>
 
 <!-- Venez seuls et repartez en groupe -->
