--- a/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
+++ b/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
@@ -1,13 +1,11 @@
 <section class="container">
-<section class="container">
 
-       <h2>Information Personelles</h2>
-       <h2>Information Personelles</h2>
-
+  <a href="/"><p> <b><</b> Page d'accueil</p></a>
+       <h3>Information Personelles</h3>
   <form>
       <label for="nom">Nom</label>
       <input type="text" class="form-control" id="nom" required
-             name="nom" placeholder="{{Randonneur.Nom}}" />
+             name="nom" />
 
 
               <label for="prenom">Prenom</label>
