--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
@@ -1,8 +1,6 @@
 /* Partie globale */
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   font-family: "Pathway Gothic One", sans-serif;
 }
@@ -13,21 +11,31 @@ h3 {
     padding-top: 10vh;
 }
 
+h1 {
+    margin-bottom: 5vh;
+}
+
 section {
   display: flex;
   flex-direction:column;
   align-items:center;
   height: auto;
   width: 100%;
-  height: 50px;
   padding: 10px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   font-size: 1rem;
-  background-color: #3a5a40;
-  color: white;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.sejours_longs{
+  background-color: #001508;
+}
+
+.sejours_longs h1 {
+    color: white;
 }
 
 button:hover {
@@ -40,7 +48,6 @@ button:hover {
   border: none;
   padding: 10px 20px;
   font-size: 1rem;
-  cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s;
   margin-bottom: 90px;
@@ -96,7 +103,6 @@ button:hover {
   color: white;
   font-size: 20px;
   border: none;
-  cursor: pointer;
   margin-top: 40px;
   margin-bottom: 30px;
   border-radius: 30px;
@@ -125,7 +131,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 250px;
+  width: 550px;
   padding: 20px;
   background-color: #f0f0f0;
   border-radius: 30px;
@@ -140,14 +146,13 @@ button:hover {
   width: 100%;
   height: auto;
   border-radius: 10px;
-  margin-bottom: 10px;
 }
 
 .card h3 {
   text-align: center;
-  margin: 10px 0;
   font-size: 1.2rem;
   color: #333;
+  padding-top: 1vh;
 }
 
 .card p {
@@ -158,13 +163,22 @@ button:hover {
 }
 
 .card h4 {
-  margin: 10px 0;
   font-size: 1rem;
   color: #666;
 }
 
-.reservation-btn {
+.card .reservation-btn {
   margin-top: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
   border-radius: 30px;
+  height: 50px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.card .reservation-btn:hover {
+    color: white;
 }
 
