--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -3,18 +3,6 @@
 <main>
   <h3>Nos offres</h3>
 
-<section class="offre-randonnees">
-  <p>Fédérer vos équipes avec Marche & Deviens pour créer une synergie gagnante!</p>
-  <div class="img_sejourGroupe">
-    <button id="click"><h1>↵</h1></button>
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 2" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 3" />
-    <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 4" />
-    <button id="click"><h1>↳</h1></button>
-  </div>
-</section>
-
 <section class="sejours_courts">
   <h1>Séjours courts</h1>
   <div class="cardSejourCourt">
@@ -55,7 +43,6 @@
       <button class="reservation-btn">Réservation</button>
     </div>
   </div>
-  <button id="devis">Demander votre devis</button>
 </section>
 
 <section class="sejours_longs">
@@ -98,7 +85,7 @@
       <button class="reservation-btn">Réservation</button>
     </div>
   </div>
-  <button id="devis">Demander votre devis</button>
+  <button id="devis"><a href="/contact">Demander votre devis</a></button>
 </section>
 </main>
 <website-footer></website-footer>
