--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.css
@@ -27,7 +27,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #154734;
+  background-color: #49a255;
   color: white;
   width: 250px;
   height: 60px;
@@ -38,10 +38,10 @@ button {
   letter-spacing: 1px;
   transition: 100ms ease-in-out;
 }
-.boutons:hover,
+  .boutons:hover,
   button:hover {
     color: #FFF;
-    background-color: #49a255;
+    background-color: #154734;
   }
 
 /* Pour titre */
@@ -54,7 +54,7 @@ button {
   padding-left: 10vw;
   padding-bottom: 15vh;
   background-color: #C5C5A9;
-  background-image: linear-gradient(180deg, rgba(111,130,122,0.5) 0%, rgba(235,234,241,0.8) 90%, rgba(255,255,255, 1) 100%), url(https://marchedeviens.com/wp-content/uploads/2023/04/DSC8709-1024x683.jpg);
+  background-image: linear-gradient(180deg, rgba(111,130,122,0.5) 0%, rgba(15,30,15,0.8) 90%, rgba(0,0,0, 0.8) 100%), url(https://marchedeviens.com/wp-content/uploads/2023/04/DSC8709-1024x683.jpg);
   backdrop-filter: grayscale();
   background-position: left;
   background-size: cover;
@@ -73,13 +73,14 @@ button {
     height: 70px;
     font-size: 6rem;
     margin-bottom: 5px; /* Augmentation de la marge */
-    color: #000000;
+    color: white;
 }
 
 .hero-page_subtitle {
     font-weight: lighter;
     font-size: 3rem;
     padding-top: 3vh;
+    color: white;
 }
 
 /* Partie présentation */
@@ -157,7 +158,7 @@ video {
     grid-template-columns: 60% 40%;
     grid-template-rows: 50% 50%;
     gap: 5px;
-    padding-left: 5vw;
+    padding-left: 15vw;
     padding-right: 5vw;
     margin-bottom: 10vh;
     height: 600px;
@@ -165,6 +166,14 @@ video {
 
 .page-container img {
     height: 100%;
+    transition: 500ms ease-in-out;
+    filter: grayscale(50%);
+}
+
+.page-container img:hover {
+    height: 102%;
+    object-fit: cover;
+    filter: none;
 }
 
 .page-container img:first-child {
