--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.css
@@ -4,11 +4,13 @@ section {
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
-    padding-top: 5vh;
+    padding-top: 27.7vh;
+    padding-bottom: 27.7vh;
 }
 
 h3 {
-    text-align:center;
+  text-align: center;
+  font-size: 2.5rem;
 }
 
 form {
