--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/page-inscription-connection.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/page-inscription-connection.component.css
@@ -3,12 +3,14 @@
   grid-template-columns: repeat(2, 1fr);
   grid-row: auto;
   align-items: center;
+  height: 90vh;
 }
 
 app-formulaire-connexion {
   background-color: #154734;
   color: white;
-  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 
