--- a/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.css
+++ b/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.css
@@ -1,30 +1,61 @@
-h2{
-  display:flex;
-  justify-content:center;
+/* centrer le contenue de la page*/
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  padding-top: 5vh;
+}
+
+a {
+    position: absolute;
+    top: 3vh;
+    left: 3vh
+}
+
+h3 {
+  text-align: center;
+  font-size: 2.5rem;
 }
 
 form {
-  display: grid;
-  border-right: solid 3px black;
-  justify-content: center
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 15vh;
+  padding-right: 15vh;
+  margin-top: 5vh;
 }
 
+/* affiche un message d'erreur si erreur dans le mail ou le mot de passe*/
+.Inactif {
+  display: none
+}
+
+.Actif {
+  display: flex;
+  justify-content: center;
+  color: red;
+}
+
+/* stylisation des "input" */
 input {
-  height: 30px;
-  font-size: 1.2rem;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
 }
 
-.submit {
-
-  margin-top: 1vh;
-}
-
-textarea {
-  height: 140px;
-  font-size: 1.2rem;
-}
-
-label {
-  font-size: 1.5em;
-  margin-bottom: 0.8vh;
-}
+  input[type=submit]:hover {
+    background-color: black;
+  }
+  /*application de style sur le "input" de type "submit"*/
+  input[type=submit] {
+    background-color: rgb(88, 129, 87);
+    color: white;
+    border: 0;
+    transition: 100ms ease-in-out;
+  }
