refactor: remove comments to avoid conflicts

--- a/FrontMarcheEtDevenir/src/app/profile-page/profil-page.component.html
+++ b/FrontMarcheEtDevenir/src/app/profile-page/profil-page.component.html
@@ -1,7 +1,7 @@
 <main>
   <h1>Profil</h1>
   <section>
-    <!-- <app-information-personalles-display></app-information-personalles-display>
-    <app-changer-mdp></app-changer-mdp> -->
+    <app-information-personalles-display></app-information-personalles-display>
+    <app-changer-mdp></app-changer-mdp> 
   </section>
 </main>
