feat: bouton d'ajout de randonnée

--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -3,6 +3,8 @@
 <main>
   <h3>Nos offres</h3>
 
+  <a href="/admin/ajoutrandonnee"><button class="ajout-rdn"></button></a>
+
 <section class="sejours_courts">
   <h1>Séjours courts</h1>
   <div class="cardSejourCourt">
