--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
@@ -15,6 +15,31 @@ h1 {
     margin-bottom: 5vh;
 }
 
+.ajout-rdn {
+  color: #65b173;
+  width: 50px;
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: 300;
+  display: block;
+  margin-top: 2vh;
+  margin-left: 48vw;
+  border: solid 2px #65b173;
+  border-radius: 50px;
+  background-color:transparent;
+  cursor: pointer;
+  transition: 500ms ease-in-out;
+}
+
+.ajout-rdn:before {
+  content: '+';
+}
+  .ajout-rdn:hover {
+    transform: scale(1.2);
+    border: solid 2px transparent;
+  }
+
+
 section {
   display: flex;
   flex-direction:column;
@@ -25,8 +50,6 @@ section {
   padding-top: 5vh;
   padding-bottom: 5vh;
   font-size: 1rem;
-  border: none;
-  border-radius: 5px;
   transition: background-color 0.3s;
 }
 
@@ -51,6 +74,7 @@ button:hover {
   border-radius: 5px;
   transition: background-color 0.3s;
   margin-bottom: 90px;
+  transition: 500ms ease-in-out;
 }
 
 .img_sejourGroupe button:hover {
@@ -106,6 +130,7 @@ button:hover {
   margin-top: 40px;
   margin-bottom: 30px;
   border-radius: 30px;
+  transition: 500ms ease-in-out;
 }
 
 #devis:hover {
@@ -114,7 +139,6 @@ button:hover {
 
 .sejours_courts{
     width: 100%;
-    margin-top:30px;
 }
 
 /* Partie container / images */
@@ -167,16 +191,17 @@ button:hover {
   color: #666;
 }
 
-.card .reservation-btn {
-  margin-top: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  border-radius: 30px;
-  height: 50px;
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
+  .card .reservation-btn {
+    margin-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 30px;
+    height: 50px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: 200ms ease-in-out;
+  }
 
 .card .reservation-btn:hover {
     color: white;
