--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -1,49 +1,78 @@
 <section>
-  <h3> Créer un compte</h3>
+  <!-- Section de création de compte -->
+  <!-- Cette section contient le formulaire de création de compte pour les nouveaux utilisateurs. -->
+
+  <!-- Titre de la section de création de compte -->
+  <!-- Affiche le titre de la section de création de compte. -->
+  <h3>Créer un compte</h3>
+
+  <!-- Formulaire de création de compte -->
+  <!-- Formulaire permettant aux utilisateurs de créer un compte en entrant leurs informations personnelles. -->
   <form #form="ngForm" (submit)="onSubmit(form)">
+
+    <!-- Label et champ de saisie pour le nom -->
+    <!-- Label demandant à l'utilisateur d'entrer son nom. -->
     <label for="nom">Veuillez entrer votre Nom</label>
-    <input type="text" name="nom" id="inscriptionNom"
-    #nom="ngModel"
-    [(ngModel)]="service.FormData.Nom"
-    required />
+    <!-- Champ de saisie pour le nom de l'utilisateur. -->
+    <!-- Utilise la directive ngModel pour la liaison de données avec service.FormData.Nom. -->
+    <input type="text" name="nom" id="inscriptionNom" #nom="ngModel" [(ngModel)]="service.FormData.Nom" required />
 
-    <label for="prenom">Veuillez entrer votre Prenom</label>
-    <input type="text" name="prenom" id="inscriptionPrenom"     
-    #prenom="ngModel"
-    [(ngModel)]="service.FormData.Prenom" 
-    required />
+    <!-- Label et champ de saisie pour le prénom -->
+    <!-- Label demandant à l'utilisateur d'entrer son prénom. -->
+    <label for="prenom">Veuillez entrer votre Prénom</label>
+    <!-- Champ de saisie pour le prénom de l'utilisateur. -->
+    <!-- Utilise la directive ngModel pour la liaison de données avec service.FormData.Prenom. -->
+    <input type="text" name="prenom" id="inscriptionPrenom" #prenom="ngModel" [(ngModel)]="service.FormData.Prenom"
+      required />
 
+    <!-- Label et champ de saisie pour l'adresse mail -->
+    <!-- Label demandant à l'utilisateur d'entrer son adresse mail. -->
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="mail" id="inscriptionMail" 
-    #mail="ngModel"
-    [(ngModel)]="service.FormData.Mail"
-    required />
+    <!-- Champ de saisie pour l'adresse mail de l'utilisateur. -->
+    <!-- Utilise la directive ngModel pour la liaison de données avec service.FormData.Mail. -->
+    <input type="email" name="mail" id="inscriptionMail" #mail="ngModel" [(ngModel)]="service.FormData.Mail" required />
 
-    <label for="telephone">Veuillez entrer votre numéro de telephone</label>
-    <input type="email" name="telephone" id="inscriptionMail" 
-    #telephone="ngModel"
-    [(ngModel)]="service.FormData.Telephone"
-    required />
+    <!-- Label et champ de saisie pour le numéro de téléphone -->
+    <!-- Label demandant à l'utilisateur d'entrer son numéro de téléphone. -->
+    <label for="telephone">Veuillez entrer votre numéro de téléphone</label>
+    <!-- Champ de saisie pour le numéro de téléphone de l'utilisateur. -->
+    <!-- Utilise la directive ngModel pour la liaison de données avec service.FormData.Telephone. -->
+    <input type="text" name="telephone" id="inscriptionTelephone" #telephone="ngModel"
+      [(ngModel)]="service.FormData.Telephone" required />
 
+    <!-- Label et champ de saisie pour le mot de passe -->
+    <!-- Label demandant à l'utilisateur d'entrer un mot de passe. -->
     <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="motDePasse" id="inscriptionMotdePasse" 
-    #motDePasse="ngModel"
-    [(ngModel)]="service.FormData.MotDePasse"
-    minlength="8"  required />
+    <!-- Champ de saisie pour le mot de passe de l'utilisateur. -->
+    <!-- Utilise la directive ngModel pour la liaison de données avec service.FormData.MotDePasse. -->
+    <!-- Le mot de passe doit avoir une longueur minimale de 8 caractères. -->
+    <input type="password" name="motDePasse" id="inscriptionMotdePasse" #motDePasse="ngModel"
+      [(ngModel)]="service.FormData.MotDePasse" minlength="8" required />
 
+    <!-- Section des exigences du mot de passe -->
+    <!-- Cette section affiche les exigences que doit respecter le mot de passe. -->
     <section class="messageCache">
-      <h4>le mot de passe doit contenir : </h4>
-      <p class="messageCache"> au moins une <b>minuscule</b> </p>
-      <p class="messageCache"> au moins une <b>majuscule</b> </p>
-      <p class="messageCache"> au moins un <b>chiffre</b> </p>
-      <p class="messageCache"> au moins un <b>caractère spécial</b> </p>
-      <p class="messageCache"> au moins  <b>8 charactères</b> </p>
+      <h4>Le mot de passe doit contenir :</h4>
+      <!-- Exigence : au moins une minuscule -->
+      <p class="messageCache">au moins une <b>minuscule</b></p>
+      <!-- Exigence : au moins une majuscule -->
+      <p class="messageCache">au moins une <b>majuscule</b></p>
+      <!-- Exigence : au moins un chiffre -->
+      <p class="messageCache">au moins un <b>chiffre</b></p>
+      <!-- Exigence : au moins un caractère spécial -->
+      <p class="messageCache">au moins un <b>caractère spécial</b></p>
+      <!-- Exigence : au moins 8 caractères -->
+      <p class="messageCache">au moins <b>8 caractères</b></p>
     </section>
 
-
+    <!-- Label et champ de saisie pour la confirmation du mot de passe -->
+    <!-- Label demandant à l'utilisateur de confirmer son mot de passe. -->
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
+    <!-- Champ de saisie pour la confirmation du mot de passe de l'utilisateur. -->
     <input type="password" name="inscriptionConfirmationMotdePasse" id="inscriptionConfirmationMotdePasse" required />
 
-    <input type="submit" value="Creer un compte" />
+    <!-- Bouton de soumission du formulaire de création de compte -->
+    <!-- Bouton permettant de soumettre le formulaire de création de compte. -->
+    <input type="submit" value="Créer un compte" />
   </form>
 </section>
