feat: changement du type pour l'input telephone de tel à string

--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -30,7 +30,7 @@
     required />
 
     <label for="telephone">Veuillez entrer votre numéro de telephone</label>
-    <input type="tel" name="telephone" 
+    <input type="text" name="telephone" 
     id="inscriptionTelephone"
     placeholder="0707070707" 
     #telephone="ngModel"
